<resources>
    <string name="app_name">BHomestay</string>
    <string name="tit_dialog_choose_network">Please choose network</string>
    <string name="txt_dialog_choose_network">Please choose network that one you want to connect</string>
    <string name="txt_dialog_btn_ok">Ok</string>
    <string name="txt_dialog_btn_cancel">Cancel</string>
    <string name="txt_dialog_waiting" />
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Layout Login-->
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgetPassword">Quên mật khẩu</string>
    <string name="nameButtonLogin">Đăng nhập</string>
    <string name="nameButtonRegister">Bạn chưa có tài khoản? Đăng ký</string>

    <!--Layout Register-->
    <string name="firstName">Tên</string>
    <string name="lastName">Họ</string>
    <string name="confirmPassword">Xác nhận mật khẩu</string>
    <string name="namebuttonRegister">Đăng ký</string>
    <string name="namebuttonLogin">Bạn đã có tài khoản? Đăng nhập</string>

    <!--Layout Result Homestay-->
    <string name="nameHost">Diễm Hương</string>

    <!--Layout Homestay Details-->
    <string name="action_settings">Settings</string>
    <string name="mainConvenient">TIỆN NGHI CHÍNH</string>
    <string name="nameHomestay">Homestay Corvin</string>
    <string name="showAllConvenient">XEM TOÀN BỘ TIỆN NGHI</string>
    <string name="voteRating">BÌNH CHỌN ĐÁNH GIÁ</string>
    <string name="showAllRate">XEM TẤT CẢ ĐÁNH GIÁ</string>
    <string name="address">Nguyễn Chánh, Liên Chiểu, Đà Nẵng</string>
    <string name="detailsHomestay">MÔ TẢ HOMESTAY</string>
    <string name="showdetails">XEM CHI TIẾT</string>
    <string name="nameRoom">Superior Room</string>
    <string name="unitPrice">Giá tiền 1 đêm, 1 phòng</string>
    <string name="price">400.000 VND</string>

    <!--Layout My account-->
    <string name="avatar">Ảnh đại diện</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="gender">Giới tính</string>
    <string name="birth">Ngày sinh</string>
    <string name="nationality">Quốc tịch</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="save">Lưu</string>

    <!--Layout Reset Password-->
    <string name="guide1">Xin vui lòng nhập email của bạn vào ô trên</string>
    <string name="guide2">Chúng tôi sẽ gửi bạn hướng dẫn cụ thể</string>
    <string name="reset">Lấy lại mật khẩu</string>
    <string name="logout">Đăng xuất</string>

    <!--Layout Search Homestay-->
    <string name="hintSearch">Bạn muốn đi đâu?</string>
    <string name="search">Tìm kiếm</string>

    <!--Layout Contact Host-->
    <string name="title">Tiêu đề</string>
    <string name="hintTitle">Hãy nhập tiêu đề bạn muốn liên hệ</string>
    <string name="message">Nội dung</string>
    <string name="hintMessage">Hãy nhập nội dung bạn muốn liên hệ</string>
    <string name="nameButtonContact">Gửi tin nhắn</string>

    <!--Layout Story-->
    <string name="nameStory">Phượt Đà Nẵng</string>
</resources>
