<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/information_register"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@drawable/edittext"
            android:hint="@string/firstName"
            android:inputType="text"
            android:textColor="#9E9E9E" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginTop="@dimen/layout_marginTopBetweenEditText"
            android:background="@drawable/edittext"
            android:hint="@string/lastName"
            android:inputType="text"
            android:textColor="#9E9E9E" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginTop="@dimen/layout_marginTopBetweenEditText"
            android:background="@drawable/edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#9E9E9E" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginTop="@dimen/layout_marginTopBetweenEditText"
            android:background="@drawable/edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#9E9E9E" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginTop="@dimen/layout_marginTopBetweenEditText"
            android:background="@drawable/edittext"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textColor="#9E9E9E" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="vertical">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@drawable/button_blue"
            android:text="@string/namebuttonRegister"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@drawable/button_orange"
            android:text="@string/namebuttonLogin"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="23sp" />
    </LinearLayout>

</LinearLayout>
