<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:text="@string/avatar"
            android:textAllCaps="false"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="@dimen/widthAvatar"
            android:layout_height="@dimen/heightAvatar"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:text="@string/firstName"
            android:textAllCaps="false"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/txt_firstName"
            android:background="@drawable/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginLeft="@dimen/marginLeft" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:text="@string/lastName"
            android:textAllCaps="false"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/txt_lastName"
            android:background="@drawable/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginLeft="@dimen/marginLeft" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:text="@string/phoneNumber"
            android:textAllCaps="false"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/txt_phoneNumber"
            android:background="@drawable/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginLeft="@dimen/marginLeft" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:text="@string/gender"
            android:textAllCaps="false"
            android:textSize="15sp"/>

        <RadioGroup
            android:id="@+id/radioGroups_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginLeft="@dimen/marginLeft"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/male"
                android:textSize="16sp"
                android:textColor="@drawable/text_radiobutton" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/female"
                android:textSize="16sp"
                android:textColor="@drawable/text_radiobutton" />

            <RadioButton
                android:id="@+id/radioOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button"
                android:button="@null"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/others"
                android:textSize="16sp"
                android:textColor="@drawable/text_radiobutton" />
        </RadioGroup>

        <TextView
            android:id="@+id/birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:text="@string/birth"
            android:textAllCaps="false"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginLeft="@dimen/marginLeft"
            android:ems="15"
            android:inputType="date"/>

        <TextView
            android:id="@+id/nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginLeft="@dimen/marginLeft"
            android:text="@string/nationality"
            android:textAllCaps="false"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/text_nationality"
            android:background="@drawable/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginLeft="@dimen/marginLeft" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_marginLeft="@dimen/marginLeft"
            android:text="@string/save"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_blue" />
    </LinearLayout>

</ScrollView>

